--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,10 @@ Thumbs.db
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
-# Don't include generated files
-src/lib/generated
-
 # Don't include result
 result
+
+*.local
+.vite-inspect
+.remote-assets
+components.d.ts
