--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
     "vue": "^3.5.13"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3",
+    "prettier-plugin-slidev": "^1.0.5"
   }
 }
